<resources>
    <string name="app_name" translatable="false">Crowdo Connect</string>
    <string name="app_name_welcome" translatable="false">connect</string>
    <string name="authentication_ACTION" translatable="false">com.crowdo.p2pconnect.ACTION</string>
    <string name="authentication_ACCOUNT" translatable="false">com.crowdo.p2pconnect.ACCOUNT</string>
    <string name="authentication_TOKEN" translatable="false">com.crowdo.p2pconnect.TOKEN</string>
    <string name="authentication_EMAIL" translatable="false">com.crowdo.p2pconnect.EMAIL</string>
    <string name="authentication_LOCALE" translatable="false">com.crowdo.p2pconnect.LOCALE</string>
    <string name="authentication_INVALID_TOKEN" translatable="false">INVALID_TOKEN</string>
    <string name="facebook_app_id" translatable="false">155117747942297</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb155117747942297</string>
    <string name="linkedin_client_id" translatable="false">75wudfk13y91r8</string>
    <string name="linkedin_client_secret" translatable="false">KGwSaojd66cc80wO</string>
    <string name="navmenu_label_actions">Actions</string>
    <string name="navmenu_label_preferences">Preferences</string>
    <string name="navmenu_label_language">Language</string>
    <string name="toolbar_title_loan_list">Investments</string>
    <string name="toolbar_title_loan_detail">Details</string>
    <string name="toolbar_title_learning_center">Learning Center</string>
    <string name="toolbar_title_account_wallet">Account</string>
    <string name="toolbar_title_top_up_wallet">Top Up</string>
    <string name="toolbar_title_withdraw_wallet">Withdraw</string>
    <string name="toolbar_title_apply_investor">Apply As Investor</string>
    <string name="toolbar_title_logout">Log Out</string>
    <string name="language_english_label" translatable="false">English</string>
    <string name="language_bahasa_label" translatable="false">Bahasa</string>
    <string name="welcome_intro_1_head">Earn competitive returns</string>
    <string name="welcome_intro_1_body">Personalized investments at your fingertips</string>
    <string name="welcome_intro_2_head">Possibilities without Boundaries</string>
    <string name="welcome_intro_2_body">High quality fundraising from a global community of investors is just a few clicks away</string>
    <string name="welcome_login_btn_label">Login</string>
    <string name="welcome_register_btn_label">Register</string>
    <string name="gradeA" translatable="false">A</string>
    <string name="gradeA_plus" translatable="false">A+</string>
    <string name="gradeB" translatable="false">B</string>
    <string name="gradeB_plus" translatable="false">B+</string>
    <string name="gradeC" translatable="false">C</string>
    <string name="gradeD" translatable="false">D</string>
    <string name="gradeE" translatable="false">E</string>
    <string name="prompt_download_latest_version_title">A New Update is Available</string>
    <string name="prompt_download_latest_version_message">Please download the latest version for new features and fixes.</string>
    <string name="auth_email_incorrect_format">Email in incorrect format</string>
    <string name="auth_email_not_valid">You have specified an invalid email address</string>
    <string name="auth_password_incorrect_format">Password is too short</string>
    <string name="auth_password_too_short">Password must be at least 8 characters long</string>
    <string name="auth_password_incorrect_match">Passwords do not match</string>
    <string name="auth_password_do_not_match">Doesn\'t match Password</string>
    <string name="auth_http_error_message">Sorry, Unexpected server error occurred</string>
    <string name="auth_http_handling_message">Sorry, Unexpected handling error occurred</string>
    <string name="auth_welcome_message">Welcome&#160;</string>
    <string name="auth_fb" translatable="false">Facebook</string>
    <string name="auth_linkedin" translatable="false">Linkedin</string>
    <string name="auth_social_wait">Requesting&#46;&#46;&#160;Please Wait</string>
    <string name="auth_fb_email_permission_required">Sorry, your EMAIL permission is required for Login/Register via Facebook</string>
    <string name="auth_login_title_label">Login</string>
    <string name="auth_login_user_email_label">User Email</string>
    <string name="auth_login_user_password_label">Password</string>
    <string name="auth_login_submit_label">Login</string>
    <string name="auth_login_membership_query_label">Not a member yet?</string>
    <string name="auth_login_membership_click_on_label">SIGN UP</string>
    <string name="auth_login_social_alternative">OR</string>
    <string name="auth_login_social_text">Login with your social account</string>
    <string name="auth_register_title_label">Register</string>
    <string name="auth_register_user_email_label">Email Address</string>
    <string name="auth_register_user_name_label">Name</string>
    <string name="auth_register_user_password_label">Password</string>
    <string name="auth_register_user_confirm_password_label">Confirm Password</string>
    <string name="auth_register_submit_label">Sign Up</string>
    <string name="auth_register_membership_query_label">Already a member?</string>
    <string name="auth_register_membership_click_on_label">LOGIN</string>
    <string name="auth_register_social_alternative">OR</string>
    <string name="auth_register_social_text">Register with your social account</string>
    <string name="loan_list_action_search">Search Loan ID&#46;&#46;&#46;</string>
    <string name="loan_list_action_filter_title">Filter</string>
    <string name="loan_list_action_filter_hide">Hide</string>
    <string name="loan_list_action_filter_clear">Clear</string>
    <string name="loan_list_action_filter_item_count_tail">&#160;loan(s) total</string>
    <string name="loan_list_action_filter_grades_label">Grades&#58;</string>
    <string name="loan_list_action_filter_term_label">Term\nMonths&#58;</string>
    <string name="loan_list_action_filter_security_label">Securities&#58;</string>
    <string name="loan_list_action_filter_sec_collateralized">Collateral</string>
    <string name="loan_list_action_filter_sec_uncollateralized">Non-\nCollateral</string>
    <string name="loan_list_action_filter_sec_invoice_or_cheque">Working\nOrder/Invoice</string>
    <string name="loan_list_action_filter_sec_personal_guarantee">Personal\nGuarantee</string>
    <string name="loan_list_percentage_return_label">Return</string>
    <string name="loan_list_tenure_label">Months</string>
    <string name="loan_list_bid_status_closed">Closed -&#160;</string>
    <string name="loan_list_bid_status_open">&#160;Days Left -&#160;</string>
    <string name="loan_list_out_sec_uncollateralized">Non-Collateral</string>
    <string name="loan_list_out_sec_invoice_or_cheque">Working Order/\nInvoice</string>
    <string name="loan_list_out_sec_personal_guarantee">Personal\nGuarantee</string>
    <string name="loan_detail_action_cart">Shopping Cart</string>
    <string name="loan_detail_percentage_return_label">Interest\nReturn</string>
    <string name="loan_detail_grade_label">Grade</string>
    <string name="loan_detail_tenure_label">Months Tenure</string>
    <string name="loan_detail_days_left">Days Left\n to Invest</string>
    <string name="loan_detail_target_amount_principal">Principal\nTarget</string>
    <string name="loan_detail_out_sec_uncollateralized">No Collateral</string>
    <string name="loan_detail_out_sec_invoice_or_cheque">Working Order/\nInvoice</string>
    <string name="loan_detail_out_sec_personal_guarantee">Personal\nGuarantee</string>
    <string name="loan_detail_progress_description_tail_label">%\nFunded</string>
    <string name="loan_detail_schedule_header_string">Monthly</string>
    <string name="loan_detail_schedule_header_content_description">Payment Schedule</string>
    <string name="loan_detail_schedule_start_label">Start</string>
    <string name="loan_detail_schedule_first_repayment_label">1st\nRepayment</string>
    <string name="loan_detail_schedule_last_repayment_label">Last\nRepayment</string>
    <string name="loan_detail_avalible_amount_description">Available for Bidding:</string>
    <string name="loan_detail_enter_amount_currency_symbol_idr" translatable="false">Rp</string>
    <string name="loan_detail_enter_amount_unit_zeros_idr" translatable="false">,000,000</string>
    <string name="loan_detail_enter_amount_minus_content_description">Subtract Bid by one unit</string>
    <string name="loan_detail_enter_amount_plus_content_description">Add Bid by one unit</string>
    <string name="loan_detail_factsheet_btn_label">Factsheet</string>
    <string name="loan_detail_factsheet_btn_description">(More Info)</string>
    <string name="loan_detail_factsheet_btn_content_description">Factsheet Download</string>
    <string name="loan_detail_bidding_btn_label">Bid</string>
    <string name="loan_detail_bidding_btn_content_description">Bid Here</string>
    <string name="loan_detail_error_reading_pdf">Error opening PDF reader, please install one</string>
    <string name="loan_detail_prog_snackbar_bid_too_low">Key in amounts larger than 0</string>
    <string name="loan_detail_invalid_investor_label">To bid, you need to be a qualified investor.</string>
    <string name="loan_detail_invalid_investor_button_label">APPLY</string>
    <string name="learning_center_search_hint">Search</string>
    <string name="learning_center_categories_label_general">General Enquires</string>
    <string name="learning_center_categories_label_investor">Lender</string>
    <string name="learning_center_categories_label_borrower">Borrowers</string>
    <string name="learning_center_categories_label_fees">Fees</string>
    <string name="learning_center_categories_label_loan_document">Loan Documents</string>
    <string name="learning_center_categories_item_count_label">&#160;item(s)</string>
    <string name="learning_center_msg_fees">Please contact <a href="mailto:enquiry.p2p@crowdo.com" target="_top">enquiry.p2p@crowdo.com</a> for fee-related enquiries</string>
    <string name="checkout_summary_title_label">Checkout Summary</string>
    <string name="checkout_summary_bidding_overall_pending_bids_label">Total Pending Bids</string>
    <string name="checkout_summary_bidding_overall_available_balance_label">Available Balance</string>
    <string name="checkout_summary_bidding_overall_amt_top_up_label">Required Top Up</string>
    <string name="checkout_summary_bidding_overall_idr_currency_symbol_label" translatable="false">IDR&#160;</string>
    <string name="checkout_summary_bidding_overall_update_notify">Note: Click Update to Reflect Changes</string>
    <string name="header_checkout_summary_bid_count_label">No. of Bids:</string>
    <string name="header_checkout_summary_swipe_left_label">Swipe Bid Left To Remove</string>
    <string name="item_checkout_summary_tenure_label">&#160;MONTHS</string>
    <string name="item_checkout_summary_interest_rate_label" translatable="false">%</string>
    <string name="item_checkout_summary_enter_amount_currency_symbol_idr" translatable="false">Rp</string>
    <string name="item_checkout_summary_enter_amount_unit_zeros_idr" translatable="false">,000,000</string>
    <string name="checkout_summary_update_changes_notify_a">Your bids(s) have been adjusted:\n\n</string>
    <string name="checkout_summary_update_changes_notify_b">Reasons:\n\tA) Exceeded the loan\'s available bid amount.\n\tB) Amount is lower than minimum of&#160;</string>
    <string name="checkout_summary_update_changes_notify_c">.\n\tC) Multiple of&#160;</string>
    <string name="checkout_summary_container_top_up_label">Top Up</string>
    <string name="checkout_summary_container_update_label">Update</string>
    <string name="checkout_summary_container_confirm_label">Confirm</string>
    <string name="percent_label" translatable="false">%</string>
</resources>