<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loan_detail_avalible_amount_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/loan_detail_vertical_bracket_margin"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_family_regular"
            android:text="@string/loan_detail_avalible_amount_description"
            android:textSize="@dimen/loan_detail_small_text_size"/>
        <TextView
            android:id="@+id/loan_detail_avalible_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/loan_detail_avalible_amount_margin_left"
            android:fontFamily="@string/font_family_condensed"
            android:textSize="@dimen/loan_detail_small_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loan_detail_enter_amount_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/loan_detail_vertical_bracket_margin"
        android:layout_marginTop="@dimen/loan_detail_vertical_bracket_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@+id/loan_detail_avalible_amount_group">
        <ImageButton
            android:id="@+id/loan_detail_amount_minus_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="-2dp"
            android:padding="4dp"
            android:theme="@style/LoanDetailEditTextStyle"
            android:contentDescription="@string/loan_detail_enter_amount_minus_content_description" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/load_detail_edittext_layout">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/loan_detail_enter_amount_currency_symbol_idr"
                android:fontFamily="@string/font_family_condensed"
                android:gravity="center"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/loan_detail_enter_amount_edittext"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="20sp"
                android:textColor="@color/color_primary_text"
                android:inputType="number"
                android:gravity="center"
                android:maxLines="1"
                android:maxLength="4"
                android:theme="@style/LoanDetailEditTextStyle"
                android:cursorVisible="true"
                android:textCursorDrawable="@null" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/loan_detail_enter_amount_unit_zeros_idr"
                android:fontFamily="@string/font_family_condensed"
                android:textSize="20sp"
                android:gravity="start" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/loan_detail_amount_plus_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="-2dp"
            android:padding="4dp"
            android:theme="@style/LoanDetailEditTextStyle"
            android:contentDescription="@string/loan_detail_enter_amount_plus_content_description"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/loan_detail_vertical_bracket_margin"
        android:layout_marginTop="@dimen/loan_detail_vertical_bracket_margin"
        android:baselineAligned="false"
        android:layout_below="@+id/loan_detail_enter_amount_group">

        <LinearLayout
            android:id="@+id/loan_detail_factsheet_download_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="@dimen/loan_detail_btn_padding_btm"
            android:background="@drawable/loan_detail_factsheet_btn_layout"
            android:gravity="center"
            android:clickable="true"
            style="@style/Widget.AppCompat.Button.Colored">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cloud_download_black_36dp"
                android:tint="@color/color_icons_text"
                android:contentDescription="@string/loan_detail_factsheet_btn_content_description"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_icons_text"
                    android:text="@string/loan_detail_factsheet_btn_label"
                    android:textSize="18sp"
                    android:fontFamily="@string/font_family_regular" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_icons_text"
                    android:text="@string/loan_detail_factsheet_btn_description"
                    android:textSize="@dimen/loan_detail_small_text_size"
                    android:fontFamily="@string/font_family_condensed"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loan_detail_bid_enter_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="@dimen/loan_detail_btn_padding_btm"
            android:background="@drawable/loan_detail_cart_btn_layout"
            android:gravity="center"
            android:clickable="true"
            style="@style/Widget.AppCompat.Button.Colored">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cart_black_36dp"
                android:tint="@color/color_icons_text"
                android:contentDescription="@string/loan_detail_bidding_btn_content_description"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/color_icons_text"
                android:text="@string/loan_detail_bidding_btn_label"
                android:textSize="24sp"
                android:fontFamily="@string/font_family_regular"
                android:gravity="start|center_vertical"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>