<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/list_mid_left_margin"
    android:layout_marginEnd="@dimen/list_mid_right_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/loan_item_percentage_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_figure_text_size"
                android:textColor="@color/color_accent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_small_text_size"
                android:text="@string/percent_label"
                android:textColor="@color/color_accent" />
        </LinearLayout>

        <TextView
            android:id="@+id/loan_item_tenure_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_figure_text_size"
            android:textColor="@color/color_primary_text"
            android:layout_centerInParent="true" />


        <ImageView
            android:id="@+id/loan_item_collateral_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:tint="@color/fa_icon_shield"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_small_text_size"
            android:text="@string/loan_list_percentage_return_label"
            android:textColor="@color/color_accent"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_small_text_size"
            android:text="@string/loan_list_tenure_label"
            android:textColor="@color/color_primary_text"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/loan_item_collateral_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_small_text_size"
            android:textColor="@color/color_primary_text"
            android:gravity="end"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</LinearLayout>